Changed the resume + wording + solved overflow-x bug

--- a/index.css
+++ b/index.css
@@ -163,6 +163,7 @@ p#desc {
     top: 1em;
     text-align: justify;
     opacity: 0;
+    max-width: 35em;
   }
   nav#menu a:nth-child(2) {
     color: #fff;
